tests/paczka2/big_fuzzy/55578444.err
Error in line 3: PwXtf A536 81,7
Error in line 4: PwXtf A438 6,2
Error in line 6: PwXtf A536 94,6
Error in line 7: PwXtf A438 50,0
Error in line 34: 4RET A438 82,2
Error in line 24: PwXtf A536 44,7
Error in line 30: Xni7 A438 31,1
Error in line 36: PwXtf A641 59,1
Error in line 37: Xni7 S162 58,3
Error in line 47: 3IphM A536 54,3
Error in line 45: Xni7 A536 90,6
Error in line 44: PwXtf A536 24,1
Error in line 52: Xni7 A641 28,7
Error in line 65: A438 A438 70,0
Error in line 71: inankTR¯A641¯0,7
Error in line 74: 3IphM A438 36,1
Error in line 81: 3IphM S162 54,8
Error in line 83: 3IphM A536 42,2
Error in line 88: A438 A438 81,5
Error in line 84: 3IphM S162 10,0
Error in line 92: 3IphM A641 21,8
Error in line 104: A438 A536 82,6
Error in line 108: PwXtf A438 31,1
Error in line 102: inankTR A536 70,3
Error in line 94: 4RET A438 58,5
Error in line 111: 4RET A536 24,5
Error in line 110: inankTR A438 76,2
Error in line 115: 4RET S162 18,7
Error in line 120: 4RET A641 4,6
Error in line 118: 3IphM A438 33,0
Error in line 139: A438 A536 28,0
Error in line 142: 3IphM S162 34,1
Error in line 148: 4RET S162 92,3
Error in line 150: 4RET A641 16,9
Error in line 157: Xni7 A536 4,8
Error in line 153: inankTR S162 16,9
Error in line 155: 3IphM A641 71,7
Error in line 185: inankTR S162 118,54
Error in line 183: PwXtf A536 2,7
Error in line 174: Xni7 A641 38,2
Error in line 196: Xni7 A438 25,6
Error in line 208: 3IphM A641 76,6
Error in line 214: A438 A536 55,7
Error in line 213: PwXtf S162 87,9
Error in line 220: Xni7 A641 -3,7
Error in line 212: 3IphM A536 2,5
Error in line 226: 3IphM Sy62 2y,2
Error in line 227: A438 A641 41,1
Error in line 216: Xni7 A641 76,7
Error in line 225: 3IphM S162 6,4
Error in line 234: O99U1iI A536 410,8
